[gd_scene load_steps=6 format=3 uid="uid://qb5q1tomqvjr"]

[ext_resource type="Script" uid="uid://u78udd8rnr5s" path="res://Scripts/laser.gd" id="1_r1bh0"]
[ext_resource type="AudioStream" uid="uid://cinusxg8lnc6k" path="res://Assets/Sounds/LaserBolt.wav" id="2_mou6w"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mou6w"]
shading_mode = 0
albedo_color = Color(3, 0.301961, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3pc01"]
material = SubResource("StandardMaterial3D_mou6w")
radius = 0.1
height = 1.0
radial_segments = 6
rings = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c8ure"]
radius = 0.05
height = 0.4

[node name="Laser" type="Area3D"]
collision_layer = 4
script = ExtResource("1_r1bh0")
laser_color = Color(1, 0, 0, 1)
speed = 20

[node name="LaserBolt" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_3pc01")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_c8ure")

[node name="kill timer" type="Timer" parent="."]
autostart = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(3, 0.301961, 0, 1)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_mou6w")
pitch_scale = 0.6
autoplay = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="kill timer" to="." method="_on_kill_timer_timeout"]
